add orders and product list dataview

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,12 @@
             "styles": [
               "node_modules/primeicons/primeicons.css",
               "src/styles.scss"
-            ]
+            ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src"
+              ]
+            }
           },
           "configurations": {
             "production": {
