--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@primeng/themes": "^19.1.3",
-    "@tailwindcss/postcss": "^4.1.11",
     "primeicons": "^7.0.0",
-    "primeng": "^19.1.3",
+    "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.4",
-    "@angular/cli": "^20.0.4",
+    "@angular/build": "^20.1.4",
+    "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
@@ -48,7 +48,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2"
   }
 }
