--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@primeng/themes": "^19.1.3",
     "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
