--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^20.0.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@primeng/themes": "^19.1.3",
+    "chart.js": "^4.5.0",
     "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
